# revolve2

./: .gitignore  MUJOCO_LOG.TXT  mjpy  plot_aggregated_offsprings.py  plot_aggregated_stats.py  plot_evolution_stats.py  plot_fitness_metrics.py  plot_mating_stats.py  requirements_dev.txt  requirements_editable.txt  run_all.sh  run_all_configs.sh  run_linux.sh  seed  student_install.sh
Project 2/: main.py
project_2/: config.py  genotype.py  incubator.py  individual.py  main.py  pyproject.toml  runtime_main.py  simulation_result.py  standard_main.py  stats.py  test_incubator.py  test_load.py  torus_simulation_handler.py  validate_config.py
project_2/project2/: config.py  death_mechanism.py  evaluator.py  incubator.py  individual.py  mate_selection.py  simulation_result.py  stats.py  torus_simulation_handler.py
project_2/project2/configs/: config1.json  config1.py  config2.json  config2.py  config3.json  config3.py  config4.json  config4.py  config5.json  config5.py  config6.json  config6.py  config_head_stability.json  experiment_lowest_fitness_combo.json  experiment_lowest_fitness_max_distance.json  experiment_lowest_fitness_max_head.json  experiment_lowest_fitness_max_movement.json  experiment_max_age_combo.json  experiment_max_age_max_distance.json  experiment_max_age_max_head.json  experiment_max_age_max_movement.json  preliminary_max_age_20.json
project_2/project2/standard_setup/: crossover_reproducer.py  evaluator.py  parent_selector.py  robot_evolution.py  standard_setup.py  survivor_selector.py
project_2/utils/: field_limits.py  helpers.py
(+152 files in other folders)
